@@ -430,12 +430,14 @@ void element_end_forces(
 	float *Jx, float *Iy, float *Iz, float *E, float *G, float *p,
 	double **eqF_temp, // equivalent element end forces from temp loads
 	double **eqF_mech, // equivalent element end forces from mech loads
-	double *D, int shear, int geom
+	double *D, int shear, int geom, int *axial_strain_warning
 ){
-	double	*s, axial_strain;
+	double	*s, axial_strain = 0; 
 	int	m,j;
 
 	s = dvector(1,12);
+
+	*axial_strain_warning = 0;
 
 	for(m=1; m <= nE; m++) {
 
@@ -445,8 +447,10 @@ void element_end_forces(
 
 		for(j=1; j<=12; j++)	Q[m][j] = s[j];
 
-		if ( fabs(axial_strain > 0.001) )
+		if ( fabs(axial_strain) > 0.001 ) {
 		 fprintf(stderr," Warning! Frame element %2d has an average axial strain of %8.6f\n", m, axial_strain ); 
+		 ++(*axial_strain_warning);
+		}
 
 	}
 
